fix: Attempt to fix ascii art logo on mobile

--- a/public/css/irn.css
+++ b/public/css/irn.css
@@ -75,14 +75,19 @@ a {
   color: yellow;
 }
 
-/*
- * Code
- */
-
+/* ascii art logo */
 #hack pre {
   background-color: black;
   color: red;
+  margin: 0;
+  padding: 0;
+  white-space: pre;
+  overflow-x: auto;
 }
+
+/*
+ * Code
+ */
 
 code,
 pre {
